--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "knex-typescript-migrations-esm",
   "version": "1.0.0",
   "description": "",
+  "private": true,
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -14,9 +15,7 @@
     "random-int": "^3.0.0",
     "sqlite3": "^5.0.2",
     "ts-node": "^9.1.1",
-    "typescript": "^4.2.4"
-  },
-  "devDependencies": {
+    "typescript": "^4.2.4",
     "@types/node": "^14.14.41"
   }
 }
